# ridiwise

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release_docker.yml
src/ridiwise/: __main__.py
src/ridiwise/api/: base_client.py  browser_base_client.py  longblack.py  readwise.py  ridibooks.py
src/ridiwise/cmd/: common_option.py  context.py  exit_code.py  main.py  utils.py
src/ridiwise/cmd/sync/: longblack.py  main.py  ridibooks.py
src/ridiwise/tests/api/: test_logblack.py
